--- a/tests/main_test/main_test.cpp.in
+++ b/tests/main_test/main_test.cpp.in
@@ -36,7 +36,8 @@ TEST(TypedReadWriteTest, ReadWriteCharASCII) {
   // Create a simple file
   happly::PLYData plyOut;
   plyOut.addElement("test_elem", 5);
-  std::vector<char> testData{-3, 4, 11, -12, 122};
+  // std::vector<char> testData{-3, 4, 11, -12, 122};
+  std::vector<char> testData{char(-3), char(4), char(11), char(-12), char(122)};
   plyOut.getElement("test_elem").addProperty<char>("test_data", testData);
 
   // ASCII read/write
@@ -50,7 +51,8 @@ TEST(TypedReadWriteTest, ReadWriteCharBinary) {
   // Create a simple file
   happly::PLYData plyOut;
   plyOut.addElement("test_elem", 5);
-  std::vector<char> testData{-3, 4, 11, -12, 122};
+  // std::vector<char> testData{-3, 4, 11, -12, 122};
+  std::vector<char> testData{char(-3), char(4), char(11), char(-12), char(122)};
   plyOut.getElement("test_elem").addProperty<char>("test_data", testData);
 
   // Binary read/write
@@ -64,7 +66,8 @@ TEST(TypedReadWriteTest, ReadWriteCharBinarySwap) {
   // Create a simple file
   happly::PLYData plyOut;
   plyOut.addElement("test_elem", 5);
-  std::vector<char> testData{-3, 4, 11, -12, 122};
+  // std::vector<char> testData{-3, 4, 11, -12, 122};
+  std::vector<char> testData{char(-3), char(4), char(11), char(-12), char(122)};
   plyOut.getElement("test_elem").addProperty<char>("test_data", testData);
 
   // Binary read/write
@@ -463,8 +466,11 @@ TEST(TypedListReadWriteTest, ReadWriteCharASCII) {
   // Create a simple file
   happly::PLYData plyOut;
   plyOut.addElement("test_elem", 5);
+  // std::vector<std::vector<char>> testData{
+  //     {3}, {3, 0, 11, -128, 127}, {}, {}, {3, 11},
+  // };
   std::vector<std::vector<char>> testData{
-      {3}, {3, 0, 11, -128, 127}, {}, {}, {3, 11},
+    {char(3)}, {char(3), char(0), char(11), char(-128), char(127)}, {}, {}, {char(3), char(11)},
   };
   plyOut.getElement("test_elem").addListProperty<char>("test_data", testData);
 
@@ -479,8 +485,11 @@ TEST(TypedListReadWriteTest, ReadWriteCharBinary) {
   // Create a simple file
   happly::PLYData plyOut;
   plyOut.addElement("test_elem", 5);
+  // std::vector<std::vector<char>> testData{
+  //     {3}, {3, 0, 11, -128, 127}, {}, {}, {3, 11},
+  // };
   std::vector<std::vector<char>> testData{
-      {3}, {3, 0, 11, -128, 127}, {}, {}, {3, 11},
+    {char(3)}, {char(3), char(0), char(11), char(-128), char(127)}, {}, {}, {char(3), char(11)},
   };
   std::cout << "size: " << testData.size() << std::endl;
   for(auto& v : testData) {
@@ -521,8 +530,12 @@ TEST(TypedListReadWriteTest, ReadWriteUCharASCII) {
   // Create a simple file
   happly::PLYData plyOut;
   plyOut.addElement("test_elem", 5);
-  std::vector<std::vector<unsigned char>> testData{
-      {3}, {3, 0, 11, 255, 122}, {}, {}, {3, 11},
+  // std::vector<std::vector<char>> testData{
+  //     {3}, {3, 0, 11, -128, 127}, {}, {}, {3, 11},
+  // };
+  using uchar = unsigned char;
+  std::vector<std::vector<uchar>> testData{
+    {uchar(3)}, {uchar(3), uchar(0), uchar(11), uchar(-128), uchar(127)}, {}, {}, {uchar(3), uchar(11)},
   };
   plyOut.getElement("test_elem").addListProperty<unsigned char>("test_data", testData);
 
@@ -1074,11 +1087,13 @@ TEST(TypePromotionTest, PromoteSigned) {
 
   happly::PLYData ply;
   ply.addElement("test_elem", 3);
-  std::vector<char> data{1, -3, 5};
+  // std::vector<char> data{1, -3, 5};
+  std::vector<char> data{char(1), char(-3), char(5)};
   ply.getElement("test_elem").addProperty("data", data);
 
 
-  std::vector<char> dataC{1, -3, 5};
+  // std::vector<char> dataC{1, -3, 5};
+  std::vector<char> dataC{char(1), char(-3), char(5)};
   std::vector<short> dataS{1, -3, 5};
   std::vector<int> dataI{1, -3, 5};
   std::vector<long long int> dataL{1, -3, 5};
